--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Wordl Plus Jolie</h1>
+    <h1>Hello Word Plus Jolie</h1>
 </body>
 </html>
